# sebi-hack-lesson-gen-agent

./: .gitignore  langgraph.json  main.py  pyproject.toml
agents/graphs/chunking_orchestrator/testing/: initial_state.json  run_orchestrator.py
agents/graphs/content_generation/: graph.py  llm copy.py  llm.py  models.py  state.py
agents/graphs/content_generation/db/: __init__.py  db.py  load_anchors_from_db.py  load_journeys_from_db.py  load_lessons_from_db.py  load_processing_history.py  persist_content.py  schema.md
agents/graphs/content_generation/examples/: corrected_parallel_lesson_graph.py  env_example.txt  parallel_lesson_generation_example.py
agents/graphs/content_generation/nodes/: __init__.py  analyze_new_content.py  create_integration_plan.py  create_new_journey_if_needed.py  evaluate_journey_fit.py  execute_integration_plan.py  generate_complete_lessons.py  generate_lesson_content.py  generate_structured_content.py  handle_validation_errors.py  load_existing_content.py  map_to_existing_content.py  persist_to_database.py  request_human_review.py  validate_and_finalize.py
agents/graphs/content_generation/prompts/: __init__.py  analyze_new_content.py  content_analysis.py  content_generation.py  create_integration_plan.py  create_new_journey_if_needed.py  evaluate_journey_fit.py  generate_structured_content.py  handle_validation_errors.py  integration_planning.py  lesson_creation.py  map_to_existing_content.py  quiz_generation.py
agents/graphs/content_generation/utils/: __init__.py  content_generators.py  debug_utils.py  (+1 more)
agents/graphs/content_ingestion/: base_agent.py  content_harvester_langgraph.py  fastapi_endpoints.py  langgraph_orchestrator.py  llm_adapter.py  quiz_craftsman_langgraph.py  search_master_langgraph.py  summarization_engine_langgraph.py  test_content_harvester.py  translation_orchestrator_langgraph.py
data/: links.txt
scripts/: export_mongo_bundle.py  gemma_test.py  lc_rag1.ipynb  mm_rag-g4g.ipynb  scraping.ipynb
tests/: test_chunking_orchestrator_smoke.py  test_chunking_orchestrator_units.py  test_export_mongo_bundle.py
(+13 files in other folders)
